--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="icon" href="img/icon.png">
     <title>Froggy Store - Productos cute & geek</title>
+    <meta name="description" content="Froggy Store | Emprendimiento de productos lindos y coloridos de series anime, videojuegos y/o cartoon, con dibujos originales hechos por nosotros!">
+    <meta name="keywords" content="tienda, store, emprendimiento, tierno, cute, geek, anime, manga">
 </head>
 <body>
     <!-- HEADER -->
@@ -49,7 +51,7 @@
                     <a class="nav-link" href="pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="pages/preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link" href="pages/FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -130,19 +132,13 @@
     </main>
     <footer id="footer">
         <div>
+            <h4>Navegación</h4>
 			<ul>
-                <li><h4>Navegación</h4></li>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="pages/productos.html">Productos</a></li>
                 <li><a href="pages/servicios.html">Servicios</a></li>
+                <li><a href="pages/FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="pages/contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-			<ul>
-                <li><h4>Información</h4></li>
-				<li><a href="pages/preguntas_frecuentes.html">Preguntas frecuentes</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
