--- a/pages/FAQS.html
+++ b/pages/FAQS.html
@@ -7,7 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
-    <title>Preguntas frecuentes - Froggy Store</title>
+    <title>FAQ's (Preguntas frecuentes) - Froggy Store</title>
+    <meta name="description" content="Froggy Store | Preguntas frecuentes; Hacemos envíos a todo el país a través de OCA. Aceptamos múltiples métodos de pago.">
+    <meta name="keywords" content="tienda, store, emprendimiento, cute, tierno, colorido, anime, comics, gaming, videojuegos">
 </head>
 <body>
     <!-- HEADER -->
@@ -49,7 +51,7 @@
                     <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link active" href="FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -59,14 +61,18 @@
     </nav>
     <!-- MAIN -->
     <main id="main">
-        <h1>Preguntas frecuentes</h1>
+        <h1>FAQ's</h1>
+        <h2>Preguntas frecuentes</h2>
         <!-- FORMULARIO -->
         <section>
             <article>
                 <h4>Froggy Store</h4>
-                <p>Somos un emprendimiento de productos sublimados con nuestros dibujos originales! Dibujamos y sublimamos productos con personajes de anime, comics, series y peliculas, cartoons, artistas musicales y todo lo relacionado a lo geek. Si te gustaron nuestros dibujos y querés uno personalizado, por favor leé la sección <a href="servicios">Personalizados</a>.</p>
+                <p>Somos un emprendimiento de productos sublimados con dibujos originales! Dibujamos y sublimamos productos con personajes de anime, comics, series y peliculas, cartoons, artistas musicales y todo lo relacionado a lo geek. Si te gustaron nuestros dibujos y querés uno personalizado, por favor leé la sección <a href="servicios">Personalizados</a>.</p>
             </article>
-            
+            <article>
+                <h4>Tabla de talles</h4>
+                <img class="tablaTalles" src="../img/talles.jpg" alt="Tabla de talles">
+            </article>
             <article>
                 <h4>Métodos de pago</h4>
                 <p>Aceptamos pagos con: Pago Facil, Rapipago, MercadoPago, tarjetas de débito y crédito y transferencia bancaria.</p>
@@ -80,12 +86,6 @@
                 <p>Aceptamos devoluciones dentro de los primeros 4 días de recibida la compra. Luego de ese periodo, no aceptamos devoluciones.</p>
             </article>
         </section>
-        <section>
-            <article>
-                <h4>Tabla de talles</h4>
-                <img src="../img/talles.jpg" alt="Tabla de talles">
-            </article>
-        </section>
     </main>
     <!-- FOOTER -->
     <footer id="footer">
@@ -95,14 +95,8 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-            <h4>Información</h4>
-			<ul>
-				<li><li><a href="preguntas_frecuentes.html">Preguntas frecuentes</a></li></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
