--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Carrito - Froggy Store</title>
+    <meta name="description" content="Froggy Store | Carrito de compras; mirá lo que te interesa comprar.">
+    <meta name="keywords" content="tienda, store, emprendimiento, Rosario, dibujo, ilustraciones, cute, tierno, colorido, anime, comics, gaming, videojuegos">
 </head>
 <body class="contenedor">
     <!-- HEADER -->
@@ -49,7 +51,7 @@
                     <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link" href="FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -62,8 +64,9 @@
         <h1>Carrito (0)</h1>
         <!-- FORMULARIO -->
         <div>
-            <h4>No agregaste nada al carrito</h4>
-            Te invitamos a navegar por nuestra tienda, seguro hay algo para vos :)
+            <h2>No agregaste nada al carrito</h2>
+            <p>Te invitamos a navegar por nuestra tienda, seguro hay algo para vos :)</p> 
+            <!-- Gracias Abril por resaltarme que estaba el texto suelto, tqm <3 -->
         </div>
     </main>
     <!-- FOOTER -->
@@ -74,14 +77,8 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-            <h4>Información</h4>
-			<ul>
-				<li><li><a href="preguntas_frecuentes.html">Preguntas frecuentes</a></li></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
