--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Iniciar sesión - Froggy Store</title>
+    <meta name="description" content="Froggy Store | Envianos tu consulta o contactanos por Whatsapp, email o visitanos a nuestro local de Bv. Oroño 123  en Rosario.">
+    <meta name="keywords" content="tienda, store, emprendimiento, cute, tierno, colorido, anime, comics, gaming, videojuegos">
 </head>
-<body>
+<body class="contenedor--2columnas">
     <!-- HEADER -->
     <header id="header">
 	    <div class="d-none d-md-flex justify-content-center align-items-center">
@@ -49,7 +51,7 @@
                     <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link" href="FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="contacto.html">Contacto</a>
@@ -58,12 +60,12 @@
         </div>
     </nav>
     <!-- MAIN -->
-    <main id="main" class="contenedor--2columnas">
+    <main id="main">
         <h1>Contacto</h1>
         <!-- INFO CONTACTO -->
         <section>
             <article>
-                <h4>Información de contacto</h4>
+                <h2>Información de contacto</h2>
                 <ul>
                     <li><a href="https://api.whatsapp.com/send?phone=#" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16" alt="Whatsapp">
@@ -86,7 +88,7 @@
         </section>
         <!-- FORMULARIO -->
         <section>
-            <article><h4>Dejanos tu pedido y/o consulta :)</h4>
+            <article><h2>Dejanos tu pedido y/o consulta :)</h2>
                 <form action="#" method="post">
                     <label for="nombre">Nombre</label>
                     <br>
@@ -117,14 +119,8 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-            <h4>Información</h4>
-			<ul>
-				<li><li><a href="preguntas_frecuentes.html">Preguntas frecuentes</a></li></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
