--- a/pages/iniciar_sesion.html
+++ b/pages/iniciar_sesion.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Iniciar sesión - Froggy Store</title>
+    <meta name="description" content="Froggy Store | Inicia sesión o crea una cuenta para tener seguimiento de tus pedidos, descuentos y mucho más!">
+    <meta name="keywords" content="tienda, store, emprendimiento, cute, tierno, colorido, anime, comics, gaming, videojuegos">
 </head>
 <body class="contenedor">
     <!-- HEADER -->
@@ -49,7 +51,7 @@
                     <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link" href="FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -84,14 +86,8 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-            <h4>Información</h4>
-			<ul>
-				<li><li><a href="preguntas_frecuentes.html">Preguntas frecuentes</a></li></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
