--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Productos - Froggy Store</title>
+    <meta name="description" content="Froggy Store | Productos de temática anime, comics, cartoon y videojuegos.">
+    <meta name="keywords" content="tierno, cute, geek, anime, manga, pokemon, yokai watch">
 </head>
 <body class="contenedor--productos">
     <!-- HEADER -->
@@ -49,7 +51,7 @@
                     <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link" href="FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -60,7 +62,7 @@
     <!-- MAIN -->
     <main id="main">
         <!-- PRODUCTOS -->
-        <h2>Productos</h2>
+        <h1>Productos</h1>
         <section>
             <article>
                 <img src="../img/productos/remera_froggy.jpg" alt="Remera Froggy">
@@ -200,14 +202,8 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-            <h4>Información</h4>
-			<ul>
-				<li><li><a href="preguntas_frecuentes.html">Preguntas frecuentes</a></li></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
