--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../style/style.css">
     <link rel="icon" href="../img/icon.png">
     <title>Servicios - Froggy Store</title>
+    <meta name="description" content="Froggy Store | Ofrecemos servicios de venta al por mayor y productos personalizados; dibujamos y sublimamos tu idea!">
+    <meta name="keywords" content="tienda, emprendimiento, sublimaciones, cute, venta al por mayor, productos personalizados">
 </head>
 <body class="contenedor">
     <!-- HEADER -->
@@ -49,7 +51,7 @@
                     <a class="nav-link active" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="preguntas_frecuentes.html">FAQ</a>
+                    <a class="nav-link" href="FAQS.html">Preguntas frecuentes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -59,37 +61,39 @@
     </nav>
     <!-- MAIN -->
     <main id="main">
-        <!-- Servicios -->
         <h1>Servicios</h1>
-        <h6>Para realizar un pedido al por mayor o personalizado, por favor contactate con nosotros por email o la sección <a href="contacto.html">"Contacto"</a>.</h6>
-        <div>
-            <h2>Venta al por mayor</h2><h5>-20% descuento</h5>
-            <p>Ofrecemos la venta de productos al por mayor. Pueden ser productos de nuestro catálogo o productos personalizados!
-            </p>
-        </div>
-        <div>
-            <h2>Personalizados</h2><h5>+10% recargo</h5>
-            <p>Ofrecemos el servicio de productos personalizados! Son remeras, tazas y/o llaveros con <b>un dibujo hecho para vos!</b> Tendrá el estilo de Froggy Store.
-            Podés pedirnos un dibujo de lo que quieras: 
-            <ul>
-                <li>Una o más personas</li>
-                <li>Tu mascota</li>
-                <li>Tu personaje favorito</li>
-                <li>Tu planta favorita</li>
-                <li>Un paisaje simple</li>
-            </ul>
-            <b>NO hacemos ilustraciones con contenido inapropiado ( +18 )</b>
-            <br>
-            Pasos del pedido personalizado:
-            <ol>
-                <li>Mandanos una consulta</li>
-                <li>Nos mandas un correo o mensaje con tu pedido. Mandanos una imagen (cuanta mas calidad, mejor!) para usarla de referencia a la hora de hacer tu pedido</li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ol>
-        </p>
-        </div>
+        <b>Para realizar un pedido al por mayor o personalizado, por favor contactate con nosotros por email o llená el <a href="contacto.html">"formulario"</a>.</b>
+        <!-- Servicios -->
+        <section>
+            <article>
+                <h2>Venta al por mayor</h2>
+                <h4>-30% descuento</h4>
+                <p>Ofrecemos la venta de productos al por mayor. Pueden ser productos de nuestro catálogo o productos personalizados!</p>
+            </article>
+        </section>
+        <section>
+            <article>
+                <h2>Personalizados</h2>
+                <h4>+20% recargo</h4>
+                <p>Ofrecemos el servicio de productos personalizados! Son remeras, tazas y/o llaveros con <b>un dibujo hecho para vos!</b> Tendrá el estilo de Froggy Store. Podés pedirnos un dibujo de lo que quieras:</p>
+                <ul>
+                    <li>Una o más personas</li>
+                    <li>Tu mascota</li>
+                    <li>Tu personaje favorito</li>
+                    <li>Tu planta favorita</li>
+                    <li>Un paisaje simple</li>
+                </ul>
+                <b>NO hacemos ilustraciones con contenido inapropiado ( +18 )</b>
+                <h3>Proceso del pedido personalizado</h3>
+                <ol>
+                    <li><b>Consultanos por mensaje:</b> escribinos un correo o llená el <a href="contacto.html">formulario</a> con tu idea. Nosotros nos comunicaremos con vos para avisarte si es posible hacer tu idea! Tené en cuenta que si necesitas tu pedido para una fecha en especial, pedir con un anticipado de 1 mes para más seguridad.</li>
+                    <li><b>Aceptamos tu pedido:</b> cuando aceptemos tu pedido, debés pagar el 50% antes de que comencemos a trabajar. Para proceder con el pedido, debés enviarnos fotos lo que querés que dibujemos y en qué producto lo querés (y decirnos el talle, en caso de pedir remeras).</li>
+                    <li><b>Vista de boceto:</b> luego de un tiempo (hasta 2 semanas después), te enviaremos bocetos con tu idea; tendrás decirnos si está bien o si querés hacer correcciones!</li>
+                    <li><b>Vista de dibujo final:</b> después de recibir tus correciones del boceto, te enviaremos el dibujo terminado y una vista previa de cómo quedaria en tu producto.</li>
+                    <li><b>Producto listo:</b> tu producto estará listo con tu dibujo hecho a medida para vos! En este punto, tendrás que pagarnos el 50% restante.</li>
+                </ol> 
+            </article>
+        </section>
     </main>
     <footer id="footer">
         <div>
@@ -98,14 +102,8 @@
 				<li><a href="../index.html">Inicio</a></li>
 				<li><a href="productos.html">Productos</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
+                <li><a href="FAQS.html">Preguntas frecuentes</a></li>
 				<li><a href="contacto.html">Contacto</a></li>
-			</ul>
-		</div>
-		<div>
-            <h4>Información</h4>
-			<ul>
-				<li><li><a href="preguntas_frecuentes.html">Preguntas frecuentes</a></li></li>
-                <li><a href="#">Términos y condiciones</a></li>
 			</ul>
 		</div>
 		<div>
@@ -113,13 +111,16 @@
 			<ul>
 				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16" alt="Whatsapp">
                     <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/></svg>
-                    +54 341 1234567</li>
+                    +54 341 1234567
+                </li>
 				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
                     <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/></svg>
-                    froggystore@gmail.com</li>
+                    froggystore@gmail.com
+                </li>
 				<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16" alt="Dirección">
                     <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/></svg>
-                    Bv. Oroño 123, Rosario</li>
+                    Bv. Oroño 123, Rosario
+                </li>
 			</ul>
 		</div>
 		<div>
