--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
 <body>
     <!-- HEADER -->
     <header>
-	    <div class="d-none d-md-flex justify-content-center align-items-center">
+	    <div class="d-none d-md-flex justify-content-evenly align-items-center">
             <input class="buscador" type="text" placeholder="Buscar...">
             <a href="index.html"><img class="logoDesktop" src="img/logoDektop.png"></a>
-            <!-- LOGIN -->
-            <a href="pages/iniciar_sesion.html">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                </svg>  
-            </a>
-            <a href="pages/carrito.html">    <!-- CARRITO -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
-                    <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
-                </svg>
-            </a>  
+            <div>
+                <!-- LOGIN -->
+                <a href="pages/iniciar_sesion.html">
+                    <svg id="iconosBoostrap" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                    </svg>  
+                </a>
+                <a href="pages/carrito.html">    <!-- CARRITO -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                        <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
+                    </svg>
+                </a>  
+            </div>
         </div>
     </header>
     <!-- NAV -->
     <nav class="navbar-expand-md navbar-light">
-        <div class="navMobile">
+        <div class="d-flex justify-content-around  align-items-center">
             <a class="navbar-brand d-md-none" href="index.html"><img class="logoMobile" src="img/logoMobileTablet.png"></a>
-            <input type="text" placeholder="Buscar..." class="buscadorMobile d-md-none">
+            <input type="text" placeholder="Buscar..." class="d-md-none">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -62,8 +64,8 @@
     <!-- MAIN -->
     <main>
         <!-- CARRUSEL -->
-        <div class="container">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div>
+            <div id="carouselExampleControls" class="carousel slide  text-center" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="img/banner1.jpg" class="d-block w-100" alt="Froggy reposando en lago">
